Fix thumbnail in creative editor overflowing container.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -6437,6 +6437,8 @@ div #campaign-field {
                 padding: 5px;
                 img {
                     display: block;
+                    width: 70px;
+                    height: auto;
                 }
                 br {
                     display: none;
